<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TeethKids</string>
    <string name="btn_sign_in">Entrar</string>
    <string name="btn_sign_up">Cadastrar</string>
    <string name="welcome">Boas-vindas!</string>
    <string name="how_to_log_in">Utilize os botões abaixo para entrar</string>
    <string name="hello_again">Olá novamente!</string>
    <string name="type_your_email">Digite seu e-mail</string>
    <string name="type_your_password">Digite sua senha</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="create_new_account">Criar nova conta</string>
    <string name="send_email">Enviar e-mail</string>
    <string name="forgot_your_password">Esqueceu sua senha?</string>
    <string name="verify_email">Verifique seu e-mail</string>
    <string name="create_your_account">Crie a sua conta</string>
    <string name="type_your_name">Digite seu nome</string>
    <string name="type_your_phone">Digite seu celular</string>
    <string name="type_your_new_password">Digite sua senha</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="next">Próximo</string>
    <string name="step_1_of_3" tools:ignore="TypographyFractions">Etapa 1/3</string>
    <string name="address">Digite seu endereço</string>
    <string name="step_2_of_3">Etapa 2/3</string>
    <string name="number">Número</string>
    <string name="complement">Complemento</string>
    <string name="register_address">Cadastre até 3 endereços de atendimento</string>
    <string name="additional_info">Conte-nos um pouco mais sobre você!</string>
    <string name="step_3_of_3">Etapa 3/3</string>
    <string name="first_address">Endereço 1</string>
    <string name="second_address">Endereço 2</string>
    <string name="third_address">Endereço 3</string>
    <string name="professional_area">Área do Profissional</string>
    <string name="profile">Perfil</string>
    <string name="emergencies">Emergências</string>
    <string name="status">Meu Status</string>
    <string name="logout">Sair</string>
    <string name="my_profile">Meu perfil</string>
    <string name="personal_data">Dados pessoais</string>
    <string name="name">Edite seu nome aqui</string>
    <string name="phone">Meu celular:</string>
    <string name="email">placeholder_email</string>
    <string name="placeholder_address">placeholder_address</string>
    <string name="tv_signin_1">Para começar, nos informe seu e-mail e crie uma senha</string>
    <string name="tv_signin_2">Agora, vamos preencher seu perfil com outros dados importantes...</string>
    <string name="wait">Espere um momento...</string>
    <string name="rating">Minha reputação</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="config">Configurações</string>
    <string name="bio">Biografia</string>
    <string name="update">Atualizar perfil</string>
    <string name="delete">Apagar perfil</string>
    <string name="available">Estou disponível</string>
    <string name="my_bio">Sobre mim:</string>
    <string name="take_picture">Tirar foto</string>
    <string name="close">Fechar</string>
    <string name="inactive_message">Você está indisponível no momento, mude essa opção nas configurações para receber novos chamados.</string>
    <string name="maps">Abrir no maps</string>
    <string name="end">Encerrar emergência</string>
    <string name="percentage_format">%d%%</string>
    <string name="accept">Aceitar</string>
    <string name="decline">Recusar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open">Abrir</string>
</resources>
