<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_go_back"
        android:importantForAccessibility="no"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/grey"
        android:src="@drawable/ic_arrow_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/my_profile"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:src="@drawable/rounded_corner"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="30dp"
        android:text="@string/personal_data"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginLeft="30dp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:layout_marginLeft="30dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="30dp"
        android:text="@string/placeholder_address"
        android:textColor="@color/black"
        android:textSize="15sp" />




</RelativeLayout>
