<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light_green_balls"
    android:padding="10dp">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/professional_area"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_profile"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/tv_area"
        android:layout_marginTop="200dp"
        android:drawableTop="@drawable/baseline_account_box_24"
        android:text="@string/profile"
        android:tooltipText="@string/profile"
        android:background="@drawable/button_background"
        android:paddingTop="12dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_emergencies"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:layout_alignEnd="@+id/tv_area"
        android:drawableTop="@drawable/baseline_warning_24"
        android:text="@string/emergencies"
        android:tooltipText="@string/profile"
        android:background="@drawable/button_background"
        android:paddingTop="12dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reputation"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/tv_area"
        android:layout_marginTop="320dp"
        android:drawableTop="@drawable/baseline_star_rate_24"
        android:text="@string/profile"
        android:tooltipText="@string/profile"
        android:background="@drawable/button_background"
        android:paddingTop="12dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_status"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginTop="320dp"
        android:layout_alignEnd="@+id/tv_area"
        android:drawableTop="@drawable/baseline_done_24"
        android:text="@string/status"
        android:tooltipText="@string/profile"
        android:background="@drawable/button_background"
        android:paddingTop="12dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="440dp"
        android:layout_alignStart="@id/tv_area"
        android:layout_alignEnd="@+id/tv_area"
        android:text="@string/logout"
        android:textAlignment="center"
        android:background="@drawable/logout_button_background" />


</RelativeLayout>