<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/blue_bg"
    tools:context=".Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/config"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="20dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/available"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                style="@style/SwitchCompatStyle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="450dp"
                android:background="@drawable/rounded_corner_red"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </FrameLayout>



    </ScrollView>



</FrameLayout>